; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_af_dynaudnorm.c_minimum_filter.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_af_dynaudnorm.c_minimum_filter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DBL_MAX = common dso_local global double 0.000000e+00, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (double (i32*)* @minimum_filter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @minimum_filter(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca double, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load double, double* @DBL_MAX, align 8
  store double %5, double* %3, align 8
  store i32 0, i32* %4, align 4
  br label %6

6:                                                ; preds = %17, %1
  %7 = load i32, i32* %4, align 4
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @cqueue_size(i32* %8)
  %10 = icmp slt i32 %7, %9
  br i1 %10, label %11, label %20

11:                                               ; preds = %6
  %12 = load double, double* %3, align 8
  %13 = load i32*, i32** %2, align 8
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @cqueue_peek(i32* %13, i32 %14)
  %16 = call double @FFMIN(double %12, i32 %15)
  store double %16, double* %3, align 8
  br label %17

17:                                               ; preds = %11
  %18 = load i32, i32* %4, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* %4, align 4
  br label %6

20:                                               ; preds = %6
  %21 = load double, double* %3, align 8
  ret double %21
}

declare dso_local i32 @cqueue_size(i32*) #1

declare dso_local double @FFMIN(double, i32) #1

declare dso_local i32 @cqueue_peek(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
